--- a/mtl_mlopt_website/Gemfile
+++ b/mtl_mlopt_website/Gemfile
@@ -5,7 +5,7 @@ gem "jekyll", "~> 4.3.1"
 
 # gem "minima", "~> 2.5"
 
-gem 'bulma-clean-theme', '~> 0.13.1'
+gem 'bulma-clean-theme'
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 # gem "github-pages", group: :jekyll_plugins
