--- a/mtl_mlopt_website/Gemfile
+++ b/mtl_mlopt_website/Gemfile
@@ -1,19 +1,18 @@
 source "https://rubygems.org"
-gem "jekyll", "~> 4.3.1"
 
-
-
-# gem "minima", "~> 2.5"
 
 gem 'bulma-clean-theme'
+
+
+# gem "jekyll", "~> 4.3.1"
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
-# gem "github-pages", group: :jekyll_plugins
+gem "github-pages", group: :jekyll_plugins
 
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
+  gem "jekyll-feed"
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
