--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ github_username:  jekyll
 
 # Build settings
 # theme: minima
-theme: bulma-clean-theme
-# remote_theme: chrisrhymes/bulma-clean-theme
+# theme: bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme
 plugins:
   - jekyll-feed
  
