--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
 url: windows7lover.github.io
-baseurl: "/mtl_mlopt_website" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
