--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: bulma-clean-theme
+# theme: bulma-clean-theme
 remote_theme: chrisrhymes/bulma-clean-theme
 
 plugins:
