--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
 url: windows7lover.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "mtlopt_website_skeleton/" # the subpath of your site, e.g. /blog
+url: "https://windows7lover.github.io/mtlopt_website_skeleton/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
