--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
 url: windows7lover.github.io
-baseurl: "mtlopt_website_skeleton/" # the subpath of your site, e.g. /blog
-url: "https://windows7lover.github.io/mtlopt_website_skeleton/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://windows7lover.github.io/mtlopt_website_skeleton/"
+# baseurl: ""
+# url: "" 
 twitter_username: jekyllrb
 github_username:  jekyll
 
