--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
-url: windows7lover.github.io
 baseurl: ""
 url: "https://windows7lover.github.io/mtlopt_website_skeleton"
 # url: "" 
@@ -8,7 +7,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: bulma-clean-theme
+# theme: bulma-clean-theme
 remote_theme: chrisrhymes/bulma-clean-theme
 
 plugins:
