--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: Blog
   link: about
+- name: Callouts
+  link: callouts_pages
 - name: Researchers
   link: researchers/all_researchers
   dropdown: 
