--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
-baseurl: "/mtlopt_website_skeleton"
-url: "https://windows7lover.github.io"
-# url: "" 
+# baseurl: "/mtlopt_website_skeleton"
+# url: "https://windows7lover.github.io"
+baseurl: ""
+url: "" 
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-# theme: bulma-clean-theme
-remote_theme: chrisrhymes/bulma-clean-theme
+theme: bulma-clean-theme
+# remote_theme: chrisrhymes/bulma-clean-theme
 
 plugins:
   - jekyll-feed
