--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ url: ""
 twitter_username: jekyllrb
 github_username:  jekyll
 
+collections:
+  - talks_entries
+
 # Build settings
 theme: bulma-clean-theme
 # remote_theme: chrisrhymes/bulma-clean-theme
