--- a/_data/socialmedia_callouts.yml
+++ b/_data/socialmedia_callouts.yml
@@ -1,9 +1,9 @@
 style: is-light
 height: is-medium
 items:
-  - icon: fa-calendar
-    call_to_action_name: Talks Schedule
-    call_to_action_link: talks
+  - icon: fa-envelope
+    call_to_action_name: Join the mailing list
+    call_to_action_link: https://groups.google.com/forum/#!forum/mtl-ml-opt
   - icon_brand: true
     icon: fa-brands fa-youtube
     call_to_action_name: Recorded talks
