--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
 baseurl: "/mtlopt_website_skeleton"
 url: "https://windows7lover.github.io"
-baseurl: ""
-url: ""
+# baseurl: ""
+# url: ""
 
 future: true
 
