--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Montreal MLOpt
 email: MontrealMLOptimization@gmail.com
-baseurl: ""
-url: ""
+baseurl: "/mtlopt_website_skeleton"
+url: "https://windows7lover.github.io/"
 
 future: true
 
